# agente-ia

./: .env.example  .env.local.example  .flake8  .gitignore  CLAUDE.md  DIAGNOSTICO_SYSTEM_PROMPT.md  DIAGNOSTICO_WEBHOOK.md  Dockerfile  Dockerfile.streamlit  LICENSE  MODULES_SUMMARY.md  Makefile  PROJECT_STATUS.md  README.md  app_state.py  debug_phone_number.py  diagnostico_sofia_queries.sql  docker-compose.yml  docker-start.sh  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  deploy.yml
.playwright-mcp/: page-2026-05-08T04-42-38-257Z.yml  page-2026-05-08T04-42-55-140Z.yml
billing/: manual.py  payphone.py  stripe.py  usage.py
canales/: email.py  facebook.py  instagram.py  whatsapp.py
config/: modelos.py
core/: agent.py  buffer.py  memory.py  normalizer.py  router.py
dashboard/: admin.py  operador.py  super_admin.py
dashboard-next/: FLUJO_LOGIN_COMPLETO.md  instrumentation.ts  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts
dashboard-next/app/: globals.css  layout.tsx  page.tsx
dashboard-next/app/admin/: layout.tsx  page.tsx
dashboard-next/app/admin/clientes/: page.tsx
dashboard-next/app/admin/clientes/[id]/: page.tsx
dashboard-next/app/admin/clientes/_components/: clientes-view.tsx
dashboard-next/app/admin/clientes/nuevo/: page.tsx
dashboard-next/app/admin/facturacion/: page.tsx
dashboard-next/app/api/auth/cambiar-contrasena/: route.ts
dashboard-next/app/api/auth/login/: route.ts
dashboard-next/app/api/auth/logout/: route.ts
dashboard-next/app/api/clientes/: route.ts
dashboard-next/app/api/generate-prompt/: route.ts
dashboard-next/app/cambiar-contrasena/: page.tsx
dashboard-next/app/cliente/: layout.tsx  page.tsx
dashboard-next/app/cliente/analytics/: page.tsx
dashboard-next/app/cliente/billing/: ProofUpload.tsx  page.tsx
dashboard-next/app/cliente/campanas/: page.tsx
dashboard-next/app/cliente/catalogo/: page.tsx
dashboard-next/app/cliente/citas/: page.tsx
dashboard-next/app/cliente/configuracion/: page.tsx
dashboard-next/app/cliente/conversaciones/: page.tsx
dashboard-next/app/cliente/leads/: page.tsx
dashboard-next/app/cliente/pagos/: page.tsx
dashboard-next/app/cliente/seguimientos/: page.tsx
dashboard-next/app/login/: page.tsx
dashboard-next/app/onboarding/guia/: layout.tsx  page.tsx
dashboard-next/app/sign-in/[[...sign-in]]/: page.tsx
dashboard-next/app/sign-up/[[...sign-up]]/: page.tsx
dashboard-next/components/: prompt-generator.tsx  session-refresher.tsx
dashboard-next/components/layout/: header.tsx  layout-client.tsx  sidebar.tsx
dashboard-next/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  select.tsx  separator.tsx  skeleton.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx
dashboard-next/lib/: api.ts  auth.ts  date-format.ts  get-user.ts  server-auth.ts  supabase.ts  types.ts  utils.ts
dashboard-next/lib/data/: clientes-server.ts  clientes.ts  metrics.ts
dashboard-next/lib/supabase/: server.ts
dashboard-next/scripts/: create-test-user.ts  migrate-users-to-clerk.mjs
dashboard-next/types/: index.ts
database/: schema.sql
database/migrations/: 005_lead_scoring.sql
migrations/: add_follow_up_columns.sql  add_manual_payment_methods.sql  add_must_change_password.sql  add_pending_payment_status.sql  add_rls_ventas.sql  add_template_to_campanas.sql  backfill_lead_names_from_conversations.sql  backfill_trialing_subscriptions.sql  create_campanas.sql  create_leads_signals.sql  create_ventas.sql  disable_rls_leads.sql  enable_calificacion_module.sql  enable_rls_all_tables.sql  reenable_rls_leads.sql  rename_stripe_to_payphone_columns.sql
modulos/: agendamiento.py  alertas.py  analytics.py  calificacion.py  campanas.py  catalog_sync.py  cobros.py  links_pago.py  seguimiento.py  ventas.py
onboarding/: generator.py  wizard.py
routers/: api_routes.py  auth_routes.py  billing_routes.py  webhooks.py
scripts/: ensure_calificacion_enabled.py
seguridad/: auth.py  encryption.py  rate_limiter.py  validator.py
tests/: conftest.py  test_agent_behavior.py  test_agent_cobros.py  test_auth.py  test_calificacion.py  test_manual_billing.py  test_seguimiento.py
(+43 files in other folders)
